# rephacheck

./: .commitlintrc.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.rst  hapcheck.py  makefile  pyproject.toml  rephacheck  setup.py
rephacheck/: __init__.py  config.py  config.toml  query.py  server.py
src/rephacheck/: rephacheck.json  server.py
